fixing research page still and made desktop logos not blurry

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body{
     margin: auto;
 }
 
+img{
+  height: 80px;
+  width: auto;
+}
+
 a{
     color: blue;
     text-decoration: none;
@@ -143,6 +148,11 @@ footer{
     grid-row: 1 / span 1;
   }
 
+  .row1 img{
+    height: 400px;
+    width: auto;
+  }
+
   nav ul{
     top: 0;
     display: flex;
@@ -196,10 +206,20 @@ footer{
   }
 
   .row1_research{
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
     justify-content: center;
     color: red;
+  }
+
+  .row2_research{
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+    justify-self: center;
+  }
+
+  .row2_research img{
+    padding: 20px;
   }
 
   .row1_research li{
